# simulation

./: ,env  .cursorignore  .gitignore  =  COURSE_SETUP_README.md  Happy_Robot_Report_68a4755f18db6.csv  OPTIMIZATION_USAGE_GUIDE.md  README.md  REPORTING_STRATEGY.md  SIMULATION_USAGE_GUIDE.md  activate_env.bat  activate_env.ps1  aggregated_simulation_results.csv  analyze_proximity.py  cap_for.py  combined_simulation_results.csv  convert_shapefile_to_geojson.py  debug2.txt  debug_output.txt  example_nodes.csv  extract_csv_from_encrypted_zip.py  final_corrected_metrics_run_03.md  fix_geojson.py  gps_coordinate_logic.md  package-lock.json  package.json  polygon_heatmap.txt  pyproject.toml  refactoring_development_plan.md  refactoring_ideas.md  refactoring_todo.md  requirements.txt  run_comprehensive_golf_optimization.py  run_extract.bat  run_setup_app.py  setup_app_enhancement_strategy.md  simulation_run_01_issues.md  streamlit_app.py  swoop_cart_sim.py  sync_simulation_assets.py  (+5 more)
.cursor/rules/: configuration-management.mdc  coordinate-csv-format.mdc  project-rules.mdc  simulation-coordinate-generation.mdc  simulation-debugging.mdc
.github/workflows/: ci.yml
courses/gates_four_country_club/: route_summary.json
courses/idle_hour/: route_summary.json
courses/idle_hour_country_club/: node_travel_times.json
courses/keswick_hall/: node_travel_times.json  route_summary.json
courses/pinetree_country_club/: node_travel_times.json  route_summary.json  travel_times_simple.json
courses/pinetree_country_club - Copy copy/: node_travel_times.json
courses/purgatory/: route_summary.json
docs/: GPS_COORDINATE_TRACKING_UPDATE.md  VISIBILITY_TRACKING.md  architecture.md  bev_cart_metrics_guide.md  comprehensive_matrix_runner.md  delivery_runner_metrics_guide.md  geofence_holes_cleanup.md  gm_staffing_policy_report.md  idle_hour_controls_grid_strategy.md  new_course_testing_strategy.md  optimization_action_rail.md  optimization_reference.md  optimization_simulation_plan.md  optimization_strategy.md  optimize_staffing_policy_two_pass_dependency_map.md  pool_racquet_services_strategy.md  production_runbook.md  queue_time_by_hole_strategy.md  recommendations_template.md  refactoring_plan.md  refactoring_plan_speed_config.md  runner_optimization_guide.md  simulation_checklist.md  speed_flow.md  testing_plan.md
examples/: bev_cart_metrics_example.py  demo_dynamic_routing.py  demo_travel_times.py  example_delivery_runner_metrics_usage.py
examples/output/: delivery_metrics_example.md  delivery_metrics_summary_example.md
golfsim/: __init__.py  logging.py  performance_logger.py  utils.py
golfsim/analysis/: bev_cart_metrics.py  delivery_metrics.py  delivery_runner_metrics copy.py  delivery_runner_metrics.py  metrics_integration.py
golfsim/config/: loaders.py  models.py
golfsim/data/: osm_ingest.py
golfsim/io/: adapters.py  phase_reporting.py  reporting.py  results.py  running_totals.py
golfsim/postprocessing/: __init__.py  coordinates.py  golfer_colors.py
golfsim/preprocess/: course_model.py
golfsim/routing/: networks.py  optimal_routing.py  utils.py
golfsim/simulation/: __init__.py  bev_cart_pass.py  bev_cart_service.py  beverage_cart_service.py  crossings.py  delivery_service.py  delivery_service_base.py  engine.py  multi_runner_service.py  orchestration.py  order_generation.py  orders.py  pass_detection.py  phase_simulations.py  scenarios.py  services.py  single_runner_service.py  tracks.py  visibility_tracking.py
golfsim/tools/: __init__.py  course_data_generator.py  node_generator.py  track_generator.py
golfsim/utils/: time.py
golfsim/viz/: __init__.py  folium_viz.py  heatmap_viz.py  matplotlib_viz.py
my-map-animation/: package-lock.json  package.json  run_map_app.py
my-map-animation/docs/: blocking_holes_strategy.md  interactive_controls_strategy.md  simulation_asset_sync_strategy.md
my-map-animation/public/: cart_paths.geojson  config.json  config.json.backup  coordinates.csv  course_polygon.geojson  hole_delivery_times.geojson  hole_delivery_times_debug.geojson  holes_connected.geojson  manifest.json  simulation_metrics.json
my-map-animation/src/: App.css  App.tsx  mapbox.ts
my-map-setup/: package-lock.json  package.json  run_map_app.bat  server.py
my-map-setup/docs/: interactive_controls_strategy.md
my-map-setup/public/: manifest.json
my-map-setup/src/: App.tsx  index.tsx
outputs/20250817_135903_1_bevcarts_0_runners_1_golfers/: executive_summary_gemini.md  summary.md
outputs/20250817_161245_1_bevcarts_0_runners_1_golfers/: executive_summary_gemini.md  summary.md
outputs/20250817_162228_0_bevcarts_1_runners_1_golfers/: executive_summary_gemini.md  summary.md
outputs/20250817_170326_0_bevcarts_1_runners_1_golfers/: executive_summary_gemini.md
outputs/20250817_210828_0_bevcarts_1_runners_1_golfers/: executive_summary_gemini.md
outputs/20250817_211041_0_bevcarts_1_runners_1_golfers/: executive_summary_gemini.md
outputs/20250818_185848_0_bevcarts_1_runners_typical_weekday/: summary.md
outputs/20250818_194103_0_bevcarts_1_runners_typical_weekday/: summary.md
outputs/20250819_134230_bev_with_golfers_1_carts_1_groups/: summary.md
outputs/busy_weekend_matrix/: matrix_stats.csv  (+1 more)
public/: coordinates.csv  hole_delivery_times.geojson  manifest.json  simulation_metrics.json
scripts/: README.md  __init__.py  run_single_golfer_simulation.py  test_gemini_connection.py
tests/: conftest.py  test_basic.py  test_bev_cart_metrics.py  test_cart_paths_routing.py  test_coordinates_delivery_alignment.py  test_delivery_runner_metrics.py  test_multi_golfer_system.py  test_regression_plan_validation.py  test_services.py
utils/: __init__.py  cli.py  encoding.py  io.py  paths.py  simulation_reporting.py
(+18136 files in other folders)
