[tool.poetry]
name = "golf-delivery-sim"
version = "0.1.0"
description = "Golf course delivery simulation from OSM data (golfers follow 1..18; runners take shortest cart-path routes)."
readme = "README.md"
packages = [{include = "golfsim"}]

[tool.poetry.dependencies]
python = "^3.9"
osmnx = "^1.7.0"
geopandas = "^0.14"
networkx = "^3.2"
shapely = "^2.0"
simpy = "^4.0.1"
pandas = "^2.0"
numpy = "^1.25"
folium = "^0.15"
rtree = "^1.2.0"
matplotlib = "^3.10"
pyogrio = "^0.11"
pyproj = "^3.7"
fiona = "^1.10"
branca = "^0.8"
jinja2 = "^3.1"
xyzservices = "^2025.4"
requests = "^2.32"
certifi = "^2025.8"
charset-normalizer = "^3.4"
idna = "^3.10"
urllib3 = "^2.5"
python-dateutil = "^2.9"
pytz = "^2025.2"
tzdata = "^2025.2"
packaging = "^25.0"
six = "^1.17"

[tool.poetry.group.dev.dependencies]
ruff = "^0.12.8"
black = "^25.1.0"
mypy = "^1.17.1"
pytest = "^8.4.1"
pytest-cov = "^6.2.1"
coverage = "^7.10.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# --- Tooling configuration ---
[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311"]
skip-string-normalization = true

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F"]
ignore = [
    "E501", # handled by black
]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    "*.egg-info",
    "tests",
    "scripts",
]

[tool.ruff.format]
quote-style = "preserve"
docstring-code-format = true

[tool.ruff.lint.isort]
known-first-party = ["golfsim"]
combine-as-imports = true

[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true
disallow_untyped_defs = false
warn_unused_ignores = false
warn_redundant_casts = false
warn_no_return = false
no_site_packages = false
exclude = [
    "tests/",
    "examples/",
    "scripts/",
]
