[tool.poetry]
name = "golf-delivery-sim"
version = "0.1.0"
description = "Golf course delivery simulation from OSM data (golfers follow 1..18; runners take shortest cart-path routes)."
readme = "README.md"
packages = [{include = "golfsim"}]

[tool.poetry.dependencies]
python = "^3.9"
osmnx = "^1.9.4"
geopandas = "^0.14.4"
networkx = "^3.3"
shapely = "^2.0.7"
simpy = "^4.1.1"
pandas = "^2.2.3"
numpy = "^1.26.4"
folium = "^0.15.1"
rtree = "^1.4.0"
matplotlib = "^3.10.5"
pyogrio = "^0.11.1"
pyproj = "^3.7.1"
fiona = "^1.10.1"
branca = "^0.8.1"
jinja2 = "^3.1.6"
xyzservices = "^2025.4.0"
requests = "^2.32.4"
certifi = "^2025.8.3"
charset-normalizer = "^3.4.3"
idna = "^3.10"
urllib3 = "^2.5.0"
python-dateutil = "^2.9.0"
pytz = "^2025.2"
tzdata = "^2025.2"
packaging = "^25.0"
six = "^1.17.0"
attrs = "^25.3.0"
click = "^8.2.1"
click-plugins = "^1.1.1"
cligj = "^0.7.2"
colorama = "^0.4.6"
contourpy = "^1.3.3"
cycler = "^0.12.1"
fonttools = "^4.59.0"
kiwisolver = "^1.4.9"
MarkupSafe = "^3.0.2"
mypy-extensions = "^1.1.0"
pathspec = "^0.12.1"
pillow = "^11.3.0"
platformdirs = "^4.3.8"
Pygments = "^2.19.2"
pyparsing = "^3.2.3"
typing-extensions = "^4.14.1"
iniconfig = "^2.1.0"
pluggy = "^1.6.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.12.8"
black = "^25.1.0"
mypy = "^1.17.1"
pytest = "^8.4.1"
pytest-cov = "^6.2.1"
coverage = "^7.10.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# --- Tooling configuration ---
[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311"]
skip-string-normalization = true

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F"]
ignore = [
    "E501", # handled by black
]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    "*.egg-info",
    "tests",
    "scripts",
]

[tool.ruff.format]
quote-style = "preserve"
docstring-code-format = true

[tool.ruff.lint.isort]
known-first-party = ["golfsim"]
combine-as-imports = true

[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true
disallow_untyped_defs = false
warn_unused_ignores = false
warn_redundant_casts = false
warn_no_return = false
no_site_packages = false
exclude = [
    "tests/",
    "examples/",
    "scripts/",
]
